# servo_ai_v2

./: .gitignore  main.py  pyproject.toml
docker/: .env  docker-compose.yml  docker-compose_bak.yml  docker-compose_local.yml
docker/volumes/redis/: dump.rdb
servo_ai/: .coverage  .env.example  .gitignore  .uvicornignore  Dockerfile  README.md  celerybeat-schedule.dir  pyproject.toml  requirements.txt
servo_ai/scripts/: check_redis.py  extract_ticket_info.py  initialize_postgres.py
servo_ai/src/routers/: user.py  (+2 more)
servo_ai/tests/: conftest.py
uv-docker-example/: .env  build_and_run.sh  celerybeat-schedule.bak  pyproject.toml
uv-docker-example/scripts/: call_greet.py  check_postgres.py  pdf2image.py
uv-docker-example/src/celery_app/: app.py  demo_tasks.py  subscriber_tasks.py
uv-docker-example/src/configs/: __init__.py  config.py  database.py  logging_config.py  postgres_config.py  redis_config.py
uv-docker-example/src/exceptions/: redis_exceptions.py  user_exceptions.py
uv-docker-example/src/gui/: base_page.py  main_window.py
uv-docker-example/src/gui/config/: api_config.py  gui_config.py  style_config.py  window_config.py
uv-docker-example/src/gui/pages/: user_management.py  user_page.py
uv-docker-example/src/gui/services/: user_service.py
uv-docker-example/src/gui/utils/: api_utils.py
uv-docker-example/src/middlewares/: exception_handler copy.py  exception_handler.py
uv-docker-example/src/models/: user.py
uv-docker-example/src/routers/: __init__.py  celery_demo_router.py  redis_crud.py  user.py
uv-docker-example/src/routers/items/: list.py
uv-docker-example/src/schemas/: celery_schema.py  redis_schema.py  response_schema.py  user_schema.py
uv-docker-example/src/services/: redis_service.py  redis_task_service.py  user_service.py
uv-docker-example/src/services/tasks/: ocr_cert_task.py  test_notification_task.py
uv-docker-example/src/tools/: decorators.py  ocr_cert.py  ocr_dify.py  pdf2image.py  pdf_ocr_processor.py
uv-docker-example/src/tools/prompts/: cert_ocr_prompt.json
uv-docker-example/src/uv_docker_example/: main.py
uv-docker-example/tests/test_scripts/: test_call_greet.py  test_greet_generator.py
(+265 files in other folders)
